<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/conexao"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip"/>

        <EditText
            android:id="@+id/edittext_ip"
            android:layout_width="150dip"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:text="10.0.0.1"/>

        <Button
            android:id="@+id/button_conectar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conectar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/config_tempo"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min1" />

        <Button
            android:id="@+id/button_2min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min2" />

        <Button
            android:id="@+id/button_3min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cronometragem"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar" />

        <Button
            android:id="@+id/button_parar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parar" />


    </LinearLayout>




</LinearLayout>
